--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -3,7 +3,7 @@
 <html>
 
     <head>
-        <title>Node Todo List APP test</title>
+        <title>Node Todo App</title>
         <style>
             a {
                 text-decoration: none;
@@ -14,7 +14,7 @@
     </head>
 
     <body>
-        <h1>DON'T LET ANYONE DULL YOUR SPARKLE</h1>
+        <h1>DON'T LET ANYONE DULL YOUR Sparkle</h1>
         <ul>
             <% todolist.forEach(function(todo, index) { %>
             <li>
