--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -14,7 +14,7 @@
     </head>
 
     <body>
-        <h1>DON'T LET ANYONE DULL YOUR Sparkle</h1>
+        <h1>I am Lalit Jain</h1>
         <ul>
             <% todolist.forEach(function(todo, index) { %>
             <li>
